Adding /action endpoint for lookups by sequence
